--- a/core/templates/core/astreport.html
+++ b/core/templates/core/astreport.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
-<!-- FORCE NO CACHE - New File -->
+<!-- FORCE NO CACHE -->
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
-<meta name="cache-bust" content="NEW-FILE-v1.0-2025-01-31">
+<meta name="cache-bust" content="ASTREPORT-v1.0-2025-01-31">
 {% load humanize %}
 
 {% block title %}Asset Journal{% endblock %}
