--- a/templates/base.html
+++ b/templates/base.html
@@ -373,7 +373,7 @@
                             </a>
                             {% endif %}
                             {% if perms.core.view_ast_document %}
-                            <a href="{% url 'core:astjournal' %}" class="flex items-center px-3 py-1 text-xs font-semibold text-gray-700 rounded-md hover:bg-gray-100 hover:text-accounting-blue transition-colors duration-200 {% if 'astjournal' in request.path %}bg-gray-100 text-accounting-blue{% endif %}">
+                            <a href="{% url 'core:astjournal' %}" class="flex items-center px-3 py-1 text-xs font-semibold text-gray-700 rounded-md hover:bg-gray-100 hover:text-accounting-blue transition-colors duration-200 {% if 'astdocuments-tabs' in request.path %}bg-gray-100 text-accounting-blue{% endif %}">
                                 <svg class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
                                 </svg>
